--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.0",
+    "typescript": "^5.2.2",
     "vite": "^3.0.0"
   },
   "browserslist": {
