--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.18",
     "@tanstack/react-query": "^4.7.1",
     "@tanstack/react-query-devtools": "^4.7.1",
     "axios": "^0.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.0",
