--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@tanstack/react-query": "^4.7.1",
     "@tanstack/react-query-devtools": "^4.7.1",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0"
