--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.0",
