--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query-devtools": "^4.7.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.3.2",
+    "rc-calendar": "^9.15.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-multi-date-picker": "^4.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3"
