--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query-devtools": "^4.7.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.3.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "rc-calendar": "^9.15.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
